--- a/rabbitmq-core/pom.xml
+++ b/rabbitmq-core/pom.xml
@@ -4,12 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>rabbitmq-parent</artifactId>
-        <groupId>org.example</groupId>
+        <groupId>com.amber</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>rabbitmq-core</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.amber</groupId>
+            <artifactId>rabbitmq-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
